; ModuleID = '/home/carl/AnghaBench/zstd/lib/deprecated/extr_zbuff_compress.c_ZBUFF_compressContinue.c'
source_filename = "/home/carl/AnghaBench/zstd/lib/deprecated/extr_zbuff_compress.c_ZBUFF_compressContinue.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i64, i64, i8* }
%struct.TYPE_6__ = type { i64, i64, i8* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @ZBUFF_compressContinue(i32* %0, i8* %1, i64* %2, i8* %3, i64* %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i64*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i64*, align 8
  %11 = alloca i64, align 8
  %12 = alloca %struct.TYPE_5__, align 8
  %13 = alloca %struct.TYPE_6__, align 8
  store i32* %0, i32** %6, align 8
  store i8* %1, i8** %7, align 8
  store i64* %2, i64** %8, align 8
  store i8* %3, i8** %9, align 8
  store i64* %4, i64** %10, align 8
  %14 = load i8*, i8** %7, align 8
  %15 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %12, i32 0, i32 2
  store i8* %14, i8** %15, align 8
  %16 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %12, i32 0, i32 0
  store i64 0, i64* %16, align 8
  %17 = load i64*, i64** %8, align 8
  %18 = load i64, i64* %17, align 8
  %19 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %12, i32 0, i32 1
  store i64 %18, i64* %19, align 8
  %20 = load i8*, i8** %9, align 8
  %21 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %13, i32 0, i32 2
  store i8* %20, i8** %21, align 8
  %22 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %13, i32 0, i32 0
  store i64 0, i64* %22, align 8
  %23 = load i64*, i64** %10, align 8
  %24 = load i64, i64* %23, align 8
  %25 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %13, i32 0, i32 1
  store i64 %24, i64* %25, align 8
  %26 = load i32*, i32** %6, align 8
  %27 = call i64 @ZSTD_compressStream(i32* %26, %struct.TYPE_5__* %12, %struct.TYPE_6__* %13)
  store i64 %27, i64* %11, align 8
  %28 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %12, i32 0, i32 0
  %29 = load i64, i64* %28, align 8
  %30 = load i64*, i64** %8, align 8
  store i64 %29, i64* %30, align 8
  %31 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %13, i32 0, i32 0
  %32 = load i64, i64* %31, align 8
  %33 = load i64*, i64** %10, align 8
  store i64 %32, i64* %33, align 8
  %34 = load i64, i64* %11, align 8
  ret i64 %34
}

declare dso_local i64 @ZSTD_compressStream(i32*, %struct.TYPE_5__*, %struct.TYPE_6__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
